[gd_scene load_steps=24 format=2]

[ext_resource path="res://script/new_game_instruction.gd" type="Script" id=1]
[ext_resource path="res://scene/levels/level.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/CutiveMono.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprite/background/clavier2.png" type="Texture" id=5]
[ext_resource path="res://sprite/background/clavier.png" type="Texture" id=6]
[ext_resource path="res://sprite/background/map1.png" type="Texture" id=7]
[ext_resource path="res://sprite/background/best score.png" type="Texture" id=8]
[ext_resource path="res://sprite/background/map2.png" type="Texture" id=9]
[ext_resource path="res://sprite/home.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/CutiveMono.ttf"

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0156863, 0.156863, 0.537255, 0.862745 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.34902 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0156863, 0.156863, 0.537255, 0.862745 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.34902 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0313726, 0.129412, 0.396078, 0.137255 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.34902 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0313726, 0.129412, 0.396078, 0.137255 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.34902 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0313726, 0.129412, 0.396078, 0.137255 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.34902 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0313726, 0.129412, 0.396078, 0.137255 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0470588, 0.235294, 0.505882, 1 )
corner_detail = 2
expand_margin_left = 2.0

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 31
font_data = ExtResource( 4 )

[node name="new_game_instruction" type="Node2D"]
script = ExtResource( 1 )

[node name="level" parent="." instance=ExtResource( 2 )]

[node name="load_theme" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="load_theme"]
margin_left = 164.052
margin_top = 91.2079
margin_right = 887.052
margin_bottom = 562.208
color = Color( 0.0352941, 0.00392157, 1, 0.192157 )

[node name="ColorRect2" type="ColorRect" parent="load_theme"]
margin_left = 167.135
margin_top = 93.8164
margin_right = 884.135
margin_bottom = 558.816
color = Color( 0, 0, 0, 0.596078 )

[node name="Label" type="Label" parent="load_theme"]
margin_left = 251.009
margin_top = 121.699
margin_right = 800.009
margin_bottom = 232.699
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0470588, 0.235294, 0.505882, 1 )
text = "INSTRUCTION"

[node name="next" type="Button" parent="load_theme"]
visible = false
margin_left = 797.282
margin_top = 516.907
margin_right = 845.282
margin_bottom = 536.907
text = "next >>"
flat = true

[node name="prev" type="Button" parent="load_theme"]
visible = false
margin_left = 716.828
margin_top = 517.193
margin_right = 776.828
margin_bottom = 537.193
text = "<<prev"
flat = true

[node name="Start" parent="load_theme" instance=ExtResource( 3 )]
margin_left = 417.5
margin_top = 343.05
margin_right = 616.5
margin_bottom = 380.05
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
shortcut_in_tooltip = false
text = "Start"

[node name="int1" type="Label" parent="."]
visible = false
margin_left = 230.0
margin_top = 232.0
margin_right = 788.0
margin_bottom = 507.0
custom_fonts/font = SubResource( 8 )
text = "place your hand on the keyboard
like on the picture"

[node name="map1" type="Sprite" parent="int1"]
position = Vector2( 442.687, 174.438 )
scale = Vector2( 0.638339, 0.653641 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="int1"]
margin_left = 44.1964
margin_top = 152.439
margin_right = 296.196
margin_bottom = 186.439
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.0470588, 0.235294, 0.505882, 1 )
text = "------->"

[node name="int2" type="Label" parent="."]
visible = false
margin_left = 224.585
margin_top = 232.0
margin_right = 782.585
margin_bottom = 507.0
custom_fonts/font = SubResource( 8 )
text = "press the key that looks like
the first letter you see on
the screen to explode it"

[node name="map1" type="Sprite" parent="int2"]
position = Vector2( 476.53, 213.696 )
scale = Vector2( 0.638339, 0.653641 )
texture = ExtResource( 6 )

[node name="map2" type="Sprite" parent="int2"]
position = Vector2( 148.402, 195.599 )
scale = Vector2( 0.283469, 0.264687 )
texture = ExtResource( 7 )

[node name="Label5" type="Label" parent="int2"]
margin_left = 321.553
margin_top = 148.882
margin_right = 494.553
margin_bottom = 182.882
rect_rotation = 382.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.223529, 0.960784, 0.407843, 1 )
text = "------>"

[node name="Label6" type="Label" parent="int2"]
margin_left = 293.398
margin_top = 179.863
margin_right = 466.398
margin_bottom = 213.863
rect_rotation = 180.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.223529, 0.960784, 0.407843, 1 )
text = "------>"

[node name="int3" type="Label" parent="."]
visible = false
margin_left = 223.925
margin_top = 196.0
margin_right = 817.925
margin_bottom = 471.0
custom_fonts/font = SubResource( 8 )
text = "Win the levels  and make your 
best score"

[node name="map3" type="Sprite" parent="int3"]
position = Vector2( 411.91, 88.8914 )
scale = Vector2( 0.112129, 0.0759872 )
z_index = 11
texture = ExtResource( 8 )

[node name="map2" type="Sprite" parent="int3"]
position = Vector2( 212.692, 203.743 )
scale = Vector2( 0.417851, 0.393898 )
texture = ExtResource( 9 )

[node name="map1" type="Sprite" parent="int3"]
position = Vector2( 478.46, 185.687 )
scale = Vector2( 0.938419, 0.936127 )
z_index = 11
texture = ExtResource( 8 )

[node name="Label3" type="Label" parent="int3"]
margin_left = 382.79
margin_top = 303.476
margin_right = 555.79
margin_bottom = 337.476
rect_rotation = -33.38
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.223529, 0.960784, 0.407843, 1 )
text = "--->"

[node name="Label4" type="Label" parent="int3"]
margin_left = 480.714
margin_top = 269.714
margin_right = 562.714
margin_bottom = 303.714
rect_rotation = -367.59
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.223529, 0.960784, 0.407843, 1 )
text = "1500"

[node name="TextEdit" type="LineEdit" parent="."]
margin_left = 341.143
margin_top = 277.0
margin_right = 690.143
margin_bottom = 301.0
custom_styles/normal = SubResource( 11 )

[node name="Label3" type="Label" parent="TextEdit"]
margin_left = -92.481
margin_top = -53.6606
margin_right = 447.519
margin_bottom = -19.6606
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.0470588, 0.235294, 0.505882, 1 )
text = "Type your name and press start"

[node name="Label4" type="Label" parent="."]
margin_left = 194.87
margin_top = 531.607
margin_right = 686.87
margin_bottom = 554.607
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "*To pause or save or quit game press \"ESC\""

[node name="Menu" parent="." instance=ExtResource( 3 )]
margin_left = 751.232
margin_top = 91.7947
margin_right = 873.232
margin_bottom = 132.795
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
shortcut_in_tooltip = false
text = "menu"
icon = ExtResource( 10 )
flat = true
[connection signal="pressed" from="load_theme/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="load_theme/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="load_theme/Start" to="." method="_on_Start_pressed"]
[connection signal="focus_entered" from="Menu" to="." method="_on_Menu_focus_entered"]
